# gerippe

./: .gitignore  README.md  default.nix  gerippe.cabal  rsync.sh  shell.nix  stack.yaml
src/Database/: Gerippe.hs
src/Database/Gerippe/: Persist.hs  Utils.hs
