name:                gerippe
version:             0.2.0.0
synopsis:            Convenience function for esqueleto
description:         Please see README.md
homepage:            http://github.com/rubenmoor/gerippe#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Moor
maintainer:          ruben.moor@gmail.com
copyright:           (c) 2016 Ruben Moor
category:            development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.Gerippe
                     , Database.Gerippe.Utils
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , esqueleto
                     , persistent
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rubenmoor/gerippe
